cmake_minimum_required(VERSION 3.0)

add_subdirectory(./cmpth)
add_subdirectory(./mefdn)
add_subdirectory(./medev2)
add_subdirectory(./meqdc)
add_subdirectory(./mecom2)
add_subdirectory(./medsm2)
add_subdirectory(./meomp)

# Old libraries
#add_subdirectory(./medev)
##add_subdirectory(./meucp)
#add_subdirectory(./mecom)
#add_subdirectory(./medsm)
#add_subdirectory(./meth)
#add_subdirectory(./meuct)

enable_testing()

